src/components/ConfirmDialog/ConfirmDialog.scss
#confirm-dialog {
  display: block;
  position: fixed;
  inset: 0;
  margin: auto;
  background-color: var(--color-surface);
  border-radius: var(--border-radius);
  box-shadow: var(--box-shadow);
  z-index: var(--z-index-dialog);
  padding: 16px;
  border: none;
  max-width: calc(100% - 80px);
  width: 500px;

  .content {
    padding: 0 8px 8px 8px;
  }

  .actions {
    text-align: start;
    padding-top: 16px;
    width: 100%;
  }

  .title {
    display: flex;
    gap: 8px;
    align-items: center;
    font-size: 1.6rem;

    h2 {
      margin: 16px 0;
    }
  }

  .button {
    height: 50px;
    display: inline-flex;
    margin: 8px;
  }
}

#confirm-dialog-backdrop {
  background-color: black;
  position: fixed;
  inset: 0;
  width: 100%;
  height: 100%;
  z-index: var(--z-index-dialog);
}

